syntax = "proto3";

package runtime_stats;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "common.proto";

option go_package = "./api";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Runtime History Stats API";
  };
};

service RuntimeStats {
  rpc CountEvents(RuntimeEventsCounterReq) returns (common.Counter) {
    option (google.api.http) = {
      get: "/api/v1/stats/runtime-event/count"
    };
  }
}

message RuntimeEventsCounterReq {
  common.Period period = 1;
  // type represents the type of runtime event registered in the system.
  // Possible values are UNDEF, PROCESS_EXEC, PROCESS_EXIT, PROCESS_KPROBE, PROCESS_TRACEPOINT, PROCESS_LOADER and PROCESS_UPROBE
  optional string type = 2;
}
